--- a/index.html
+++ b/index.html
@@ -1,46 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preload" onload="this.onload=null;this.rel='stylesheet'"
-        href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-        as="style" type="text/css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preload" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" as="style" type="text/css" />
     <title>MyMail</title>
-    <link rel="stylesheet" href="css/style.css">
     <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-        crossorigin="anonymous">
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"  />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <div class="container">
-        <!-- <h1 class="text-center pt-4 fst-italic">My mail.com</h1> -->
-        <div class="row">
-            <div class="col d-flex align-items-center g-0 mt-4">
-                <button type="button" id="btnRefresh" class="btn-refresh me-2">
-                    <i class="fas fa-sync"></i>
-                </button>
-                <p class="col-lg-2 col-sm-4 mb-0">Повідомлень - </p>
-                <p class="col-lg-2  col-sm-4 mb-0">Непрочитаних - </p>
-            </div>
+      <!-- <h1 class="text-center pt-4 fst-italic">My mail.com</h1> -->
+      <div class="row">
+        <div class="col d-flex align-items-center g-0 mt-4">
+          <button type="button" id="btnRefresh" class="btn-refresh me-2">
+            <i class="fas fa-sync"></i>
+          </button>
+          <p class="col-lg-2 col-sm-4 mb-0" >Повідомлень - <span id="allCount">0</span></p>
+          <p class="col-lg-2 col-sm-4 mb-0" >Непрочитаних - <span id="unreadCount">0</span></p>
         </div>
-        <div class="row mail-list d-flex flex-column" id="mailList">
-
-        </div>
+      </div>
+      <div class="row mail-list d-flex flex-column" id="mailList"></div>
     </div>
 
     <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      crossorigin="anonymous"
+    ></script>
     <script defer src="js/senders.js"></script>
     <script defer src="js/app.js"></script>
-</body>
-
+  </body>
 </html>
